Create top part of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="top">
+        <div class="header">
+            <a class="no-underline main-link" href="">
+                <img class="logo" src="" alt="Header Logo">
+            </a>
+            <div class="nav-bar">
+                <ul class="no-bullets">
+                    <li>
+                        <a class="no-underline nav-link">
+                            header link one
+                        </a>
+                    </li>
+                    <li>
+                        <a class="no-underline nav-link">
+                            header link two
+                        </a>
+                    </li>
+                    <li>
+                        <a class="no-underline nav-link">
+                            header link three
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div>
+            <div class="title-section">
+                <div class="title">
+                    This website is awesome
+                </div>
+                <p class="title-info">
+                    This website has some subtext that goes here under
+                    the main title. It's a smaller font and the color
+                    is lower contrast
+                </p>
+                <button class="sign-up-button bold-button">
+                    Sign up
+                </button>
+            </div>
+            <img class="title-image" src="" alt="">
+        </div>
+    </div>
+
+    <div></div>
+
+    <div></div>
+
+    <div></div>
+
+    <footer></footer>
 </body>
 </html>
