--- a/index.html
+++ b/index.html
@@ -51,7 +51,41 @@
         </div>
     </div>
 
-    <div></div>
+    <div class="info-section">
+        <div class="info-title">
+            Some random information
+        </div>
+        <div class="info-content">
+            <div>
+                <img class="info-image" src="" alt="">
+                <p class="info-text">
+                    this is some subtext under an illustration or
+                    image
+                </p>
+            </div>
+            <div>
+                <img class="info-image" src="" alt="">
+                <p class="info-text">
+                    this is some subtext under an illustration or
+                    image
+                </p>
+            </div>
+            <div>
+                <img class="info-image" src="" alt="">
+                <p class="info-text">
+                    this is some subtext under an illustration or
+                    image
+                </p>
+            </div>
+            <div>
+                <img class="info-image" src="" alt="">
+                <p class="info-text">
+                    this is some subtext under an illustration or
+                    image
+                </p>
+            </div>
+        </div>
+    </div>
 
     <div></div>
 
