--- a/index.html
+++ b/index.html
@@ -87,7 +87,17 @@
         </div>
     </div>
 
-    <div></div>
+    <div class="quote-section">
+        <p class="quote-text">
+            This is an inspiring quote, or a testimonial from a
+            customer. Maybe it's just filling space, or maybe people
+            will actually read it. Who knows? All I know is that it
+            looks nice.
+        </p>
+        <div class="quote-person">
+            -Thor, God of Thunder
+        </div>
+    </div>
 
     <div></div>
 
