Create call-to-action section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,20 @@
         </div>
     </div>
 
-    <div></div>
+    <div class="call-to-action-section">
+        <div class="action-content">
+            <div class="action-title">
+                Call to action! It's time!
+            </div>
+            <p class="action-description">
+                Sign up for our product by clicking that button right
+                over there!
+            </p>
+        </div>
+        <button class="sign-up-button">
+            Sign up
+        </button>
+    </div>
 
     <footer></footer>
 </body>
