Create footer, and add background color classes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="top">
+    <div class="top dark-background">
         <div class="header">
             <a class="no-underline main-link" href="">
                 <img class="logo" src="" alt="Header Logo">
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="quote-section">
+    <div class="quote-section grey-background">
         <p class="quote-text">
             This is an inspiring quote, or a testimonial from a
             customer. Maybe it's just filling space, or maybe people
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <div class="call-to-action-section">
+    <div class="call-to-action-section blue-background">
         <div class="action-content">
             <div class="action-title">
                 Call to action! It's time!
@@ -114,6 +114,8 @@
         </button>
     </div>
 
-    <footer></footer>
+    <footer class="bottom dark-background">
+        Copyright &copy; The Odin Project 2021
+    </footer>
 </body>
 </html>
