Add alt text to image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Sign up
                 </button>
             </div>
-            <img class="title-image" src="" alt="">
+            <img class="title-image" src="" alt="Title Image">
         </div>
     </div>
 
@@ -58,28 +58,28 @@
         </div>
         <div class="info-content">
             <div>
-                <img class="info-image" src="" alt="">
+                <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
             <div>
-                <img class="info-image" src="" alt="">
+                <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
             <div>
-                <img class="info-image" src="" alt="">
+                <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
             <div>
-                <img class="info-image" src="" alt="">
+                <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
