Create concise html code

--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
             <a class="no-underline main-link" href="">
                 <img class="logo" src="" alt="Header Logo">
             </a>
-            <div class="nav-bar">
-                <ul class="no-bullets">
-                    <li>
-                        <a class="no-underline nav-link">
-                            header link one
-                        </a>
-                    </li>
-                    <li>
-                        <a class="no-underline nav-link">
-                            header link two
-                        </a>
-                    </li>
-                    <li>
-                        <a class="no-underline nav-link">
-                            header link three
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="nav-bar no-bullets">
+                <li>
+                    <a class="no-underline nav-link">
+                        header link one
+                    </a>
+                </li>
+                <li>
+                    <a class="no-underline nav-link">
+                        header link two
+                    </a>
+                </li>
+                <li>
+                    <a class="no-underline nav-link">
+                        header link three
+                    </a>
+                </li>
+            </ul>
         </div>
 
         <div>
