Correct title section <div> containers

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </ul>
         </div>
 
-        <div>
-            <div class="title-section">
+        <div class="title-section">
+            <div class="title-description">
                 <div class="title">
                     This website is awesome
                 </div>
