Stylize title section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     Sign up
                 </button>
             </div>
-            <img class="title-image" src="" alt="Title Image">
+            <img class="title-image" src="" alt="this is a placeholder for an image">
         </div>
     </div>
 
