Fix info section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="info-section">
         <div class="info-title">
-            Some random information
+            Some random information.
         </div>
         <div class="info-content">
             <div>
