--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
             Some random information.
         </div>
         <div class="info-content">
-            <div>
+            <div class="info-combo">
                 <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
-            <div>
+            <div class="info-combo">
                 <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
-            <div>
+            <div class="info-combo">
                 <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
                     image
                 </p>
             </div>
-            <div>
+            <div class="info-combo">
                 <img class="info-image" src="" alt="Info Image">
                 <p class="info-text">
                     this is some subtext under an illustration or
